Implemento JWT con modelo User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.initialization-mode=always
+
+
+
+app.jwtSecret=imagina
+# 24 hours
+app.jwtExpirationMs=86400000
